--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,16 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.wrapper{
+  display: flex;
+}
+
+.add_cart{
+  background-color: antiquewhite;
+}
+
+.display_list{
+  background-color: antiquewhite;
 }
